--- a/my-work/package.json
+++ b/my-work/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.12",
     "autoprefixer": "^10.4.21",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.540.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
@@ -30,6 +32,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "sass": "^1.90.0",
     "vite": "^7.1.2"
   }
 }
