--- a/my-work/package.json
+++ b/my-work/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.12",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.21",
     "gsap": "^3.13.0",
     "lucide-react": "^0.540.0",
